docs/content/docs/v3/security/auth-methods.md
---
title: Authentication Methods
prev: /docs/security
weight: 2
---

TSDProxy supports three authentication methods for Tailscale proxies. For
detailed setup instructions, see [Tailscale configuration]({{< ref "/docs/v3/advanced/tailscale" >}}).

## Comparison

| Feature | OAuth | OAuth (Manual) | AuthKey |
|---------|-------|---------------|---------|
| Setup complexity | Medium | Low | Low |
| Requires tags | Yes | No | Optional |
| Auto-renewal | Yes | Manual | Automatic |
| Headless operation | Yes | No | Yes |
| Fresh key on restart | Yes | N/A | No |
| Duplicate prevention | Yes | No | No |
| Device reconciliation | Yes | No | No |

## Method 1: OAuth (Recommended)

```yaml
tailscale:
  providers:
    default:
      clientId: "your_client_id"
      clientSecret: "your_client_secret"
      tags: "tag:example"
```

OAuth generates short-lived auth keys automatically. Keys are cached at
`{dataDir}/{provider}/{hostname}/tsdproxy.yaml` and renewed on restart.

OAuth is recommended for production deployments because it enables API-backed
features like fresh one-time keys on each restart, duplicate device prevention
(`preventDuplicates`), and automatic stale device reconciliation.

## Method 2: OAuth (Manual)

Leave authKey empty. Proxies show "Authenticating" in the Dashboard.
Click to authenticate via Tailscale OAuth flow.

## Method 3: AuthKey

```yaml
tailscale:
  providers:
    default:
      authKey: "tskey-auth-xxxxx"
```

Or via file: `authKeyFile: "/run/secrets/authkey"`

## Provider Resolution Priority

1. `tsdproxy.proxyprovider` label on container
2. `defaultProxyProvider` in target provider config
3. `defaultProxyProvider` at top level
4. First available provider
